--- a/Catalog/CatalogAPI/appsettings.json
+++ b/Catalog/CatalogAPI/appsettings.json
@@ -5,6 +5,7 @@
     "ConnectionStrings": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDB"
   },
+  "IdentityServerUrl": "https://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
