--- a/Basket/BasketAPI/appsettings.json
+++ b/Basket/BasketAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "RedisSettings": {
+    "Host": "localhost",
+    "Port": 6379
+  },
+  "IdentityServerUrl": "https://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
