--- a/Catalog/CatalogAPI/appsettings.json
+++ b/Catalog/CatalogAPI/appsettings.json
@@ -2,7 +2,7 @@
   "DatabaseSettings": {
     "CourseCollectionName": "Courses",
     "CategoryCollectionName": "Categories",
-    "ConnectionStrings": "mongodb://localhost:27017",
+    "ConnectionStrings": "catologmongodb://localhost:27017",
     "DatabaseName": "CatalogDB"
   },
   "IdentityServerUrl": "https://localhost:5001",
