--- a/Order/OrderAPI/appsettings.json
+++ b/Order/OrderAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSql": "User ID=admin;Password=database1.!;Server=localhost;Port=5432;Database=discountpostgresdb;IntegratedSecurity=true;Pooling=true;"
+    "DefaultConnection": "Server=localhost,1444;Database=OrderDb;User=sa;Password=database1.!"
   },
   "IdentityServerUrl": "https://localhost:5001",
   "Logging": {
