--- a/Gateways/Gateway/Gateway.csproj
+++ b/Gateways/Gateway/Gateway.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ocelot" Version="15.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
+    <PackageReference Include="Ocelot" Version="17.0.0" />
   </ItemGroup>
 
 </Project>
