--- a/Frontends/MVCWeb/appsettings.json
+++ b/Frontends/MVCWeb/appsettings.json
@@ -1,8 +1,11 @@
 {
   "ServiceApiSettings": {
-    "GatewayBaseUri": "https://localhost:5000",
+    "GatewayBaseUri": "http://localhost:5000",
     "IdentityBaseUri": "https://localhost:5001",
-    "PhotoStockUri": "http://localhost:5012"
+    "PhotoStockUri": "http://localhost:5012",
+    "Catalog": {
+      "Path": "services/catalog/"
+    }
   },
   "ClientSettings": {
     "WebClient": {
