--- a/Frontends/MVCWeb/appsettings.json
+++ b/Frontends/MVCWeb/appsettings.json
@@ -3,11 +3,15 @@
     "GatewayBaseUri": "http://localhost:5000",
     "IdentityBaseUri": "https://localhost:5001",
     "PhotoStockUri": "http://localhost:5012",
+    
     "Catalog": {
       "Path": "services/catalog/"
     },
     "PhotoStock": {
       "Path": "services/photostock/"
+    },
+    "Basket": {
+      "Path": "services/basket/"
     }
   },
   "ClientSettings": {
