--- a/Frontends/MVCWeb/appsettings.json
+++ b/Frontends/MVCWeb/appsettings.json
@@ -3,7 +3,6 @@
     "GatewayBaseUri": "http://localhost:5000",
     "IdentityBaseUri": "https://localhost:5001",
     "PhotoStockUri": "http://localhost:5012",
-    
     "Catalog": {
       "Path": "services/catalog/"
     },
@@ -12,6 +11,9 @@
     },
     "Basket": {
       "Path": "services/basket/"
+    },
+    "Discount": {
+      "Path": "services/discount/"
     }
   },
   "ClientSettings": {
